Finish alternate version of sketchpad using temporary highlight

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Grid Tests</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-<div id="grid-container">
-	
+<div id="wrapper">
+	<button id="edit-grid">Edit Grid</button>
+
+	<div id="grid-container">
+		
+	</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
